--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,8 @@ a:hover {
 	text-decoration: none;
 }
 
-.navbar-light .navbar-nav .nav-link ,
-.nav-item a {
-	font-weight: bold;
-	color: #000000 !important;
+.bg-green {
+	background-color: #4CAF50 !important;
 }
 
 .container-fluid {
@@ -50,8 +48,8 @@ a:hover {
 
 .hero-img img {
 	width: 100%;
-	height: auto;
-	
+	height: 100%;
+	object-fit: cover;
 }
 
 .hero-title {
